# Tele

./: .gitignore  README.md  index.css
AdvancedDashboard/: AdvancedDashboard.css
DicomNodes/: DicomNodes.js  EditDicomNode.js  NewDicomNodeDialog.css
DicomWorklists/: NewWorklistModal.css  NewWorklistModal.js
ImageViewer/: ImageViewer.css  ImageViewer.js
ReferrerLists/: EditReferrerForm.js  ReferrerBarChart.js  ReferrerList.js
Users/: AddUserForm.css  EditUserForm.css  EditUserForm.js  Users.css
backend/: Dockerfile  README.MD  manage.py  pyproject.toml
backend/dicomNodes/: apps.py  models.py  serializers.py  urls.py  views.py
backend/dicomNodes/migrations/: 0001_initial.py
backend/dicomWorklists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/dicomWorklists/migrations/: 0001_initial.py
backend/patients/: admin.py  models.py  serializers.py  urls.py  views.py
backend/patients/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
patientViewer/: PatientViewer.js  PhysicianDetailsDialog.js  ShareWithPhysicianDialog.css
services/: DeleteServiceDialog.js  EditServiceDialog.js  GeneralServiceTable.js
services/statics/: AddServiceDialog.css  DeleteServiceDialog.css  EditServiceDialog.css  ServiceTable.css
visits/: AddDiscount.js  AddReferrerForm.js  AddRefund.js  AdminRefund.js  ExistingPatientDialog.js  NewPatientDialog.js  PatientServicePage.js  SelectOptionDialog.js  ServiceModal.js  ServicePage.js  ServicePageEdit.js  checking.js
(+46 files in other folders)
