[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A backend for the teleRadiology project"
authors = ["STS Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
Django = "5.0.6"
django-cors-headers = "4.3.1"
django-countries = "7.6.1"
django-phonenumber-field = "7.3.0"
djangorestframework = "3.15.1"
phonenumbers = "8.13.38"
psycopg2-binary = "2.9.9"
python-decouple = "3.8"
sqlparse = "0.5.0"
typing_extensions = "4.12.2"
tzdata = "2024.1"
boto3 = "^1.34.149"
python-dotenv = "^1.0.1"
django-storages = "^1.14.4"
twilio = "^9.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"